--- a/blox/academics.css
+++ b/blox/academics.css
@@ -7,7 +7,8 @@
 }
 
 .academic-btn {
-    max-width: 225px;
+    text-align: center;
+    max-width: 300px;
     color: rgb(var(--color-primary-900));
     border: 2px solid rgb(var(--color-primary-900));
     padding-top: .75rem;
@@ -21,11 +22,19 @@
 
 .academic .title {
     font-size: 4rem;
-    margin-bottom: 6rem;
+    margin-bottom: 5rem;
+}
+
+.academic-btn svg {
+    margin-inline-end: 0.375rem;
 }
 
 .academic {
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
+}
+
+.academic:last-child {
+    margin-bottom: 0;
 }
 
 .academic-list {
@@ -50,7 +59,7 @@ a:hover {
 .courses li {
     list-style: none;
     padding-left: 0;
-    margin-left: 0;
+    margin-bottom: 0;
     flex: 0 0 50%; /* Each item takes up 50% of the width, creating two columns */
     box-sizing: border-box; /* Ensures padding and borders are included in the width */
   }
@@ -72,4 +81,10 @@ a:hover {
         padding-left: 0;
         margin-left: 0;
       }
+    
+    .center-mbl {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
